# hailo-rpi5

./: Makefile  README.md  conftest.py  install.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
config/: default.yaml
examples/: classification_example.py  detection_example.py
hailo-venv/: pyvenv.cfg
scripts/: download_models.sh
src/: __init__.py
src/core/: __init__.py  device_manager.py  inference_engine.py
src/utils/: __init__.py  model_utils.py  postprocessing.py  preprocessing.py
tests/: conftest.py  test_hailo_rpi5.py  test_hailo_rpi5_legacy.py
tests/integration/: test_hailo_hardware.py
tests/unit/: test_device_manager.py  test_inference_engine.py  test_utils.py
tools/: benchmark.py  device_info.py  model_analyzer.py
